Use re-usable data poms instead of relying on microservices